[Fix] getFirst를 get(0)로 변경 #38